--- a/components/header.html
+++ b/components/header.html
@@ -38,7 +38,7 @@
         </ul>
 
         <!-- CTA Buttons -->
-        <div class="d-flex gap-2">
+        <!-- <div class="d-flex gap-2">
           <a href="contact.html" class="btn btn-primary btn-sm">
             Get Quote
           </a>
@@ -46,7 +46,7 @@
             target="_blank" rel="noopener" class="btn btn-outline-success btn-sm">
             <i class="bi bi-whatsapp me-1"></i> WhatsApp
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </nav>
